number of parts in split dialog is now editable